feat(know): 知识库创建接口增加透传字段
